@@ -13,8 +13,9 @@ var { Channel, User } = require('../channeluser');
 var { PaginationHelper, promisedPaginationHelper } = require('../pagination-helper');
 const { GenericProvider } = require("./generic-provider");
 
-var type    = "azubu",
+var type = "azubu",
     baseURL = 'https://api.azubu.tv/public/',
+    pageSize = 100,
     headers = {};
 
 function requeue(response) {
@@ -46,10 +47,9 @@ const Azubu = newClass({
     _supportsFavorites: true,
     _supportsCredentials: true,
     getUserFavorites: async(function*(username) {
-        let perPage = 100;
         let follows = yield promisedPaginationHelper({
-            url: baseURL + "user/"+username+"/followings/list?limit="+perPage+"&offset=",
-            pageSize: perPage,
+            url: baseURL + "user/"+username+"/followings/list?limit="+pageSize+"&offset=",
+            pageSize: pageSize,
             request: (url, callback) => {
                 this._qs.queueRequest(url, headers, requeue).then(callback);
             },
@@ -106,10 +106,9 @@ const Azubu = newClass({
                     50: data.json.data.url_photo_small
                 };
 
-                let perPage = 200;
                 PaginationHelper({
-                    url: baseURL + "user/"+user.login+"/followings/list?limit="+perPage+"&offset=",
-                    pageSize: perPage,
+                    url: baseURL + "user/"+user.login+"/followings/list?limit="+pageSize+"&offset=",
+                    pageSize: pageSize,
                     request: (url, callback) => {
                         this._qs.queueRequest(url, headers, requeue).then(callback);
                     },
@@ -139,8 +138,8 @@ const Azubu = newClass({
         var channelnames = channels.map((ch) => ch.login).join(",");
 
         new PaginationHelper({
-            url: baseURL + "channel/list?channels="+channelnames+"&offset=",
-            pageSize: 100,
+            url: baseURL + "channel/list?channels="+channelnames+"&limit="+pageSize+"&offset=",
+            pageSize: pageSize,
             request: (url, callback, initial) => {
                 if(initial) {
                     this._qs.queueUpdateRequest([url], headers, this._qs.HIGH_PRIORITY, requeue, callback);
@@ -150,7 +149,7 @@ const Azubu = newClass({
                 }
             },
             fetchNextPage: function(data, pageSize) {
-                return data.json.data.length === pageSize;
+                return data.json && "data" in data.json && data.json.data.length === data.json.limit;
             },
             onComplete: (chans) => {
                 emit(this, "updatedchannels", chans.map((channel) => getChannelFromJSON(channel)));
@@ -172,13 +171,13 @@ const Azubu = newClass({
         var channelnames = channels.map((ch) => ch.login).join(",");
 
         return promisedPaginationHelper({
-            url: baseURL + "channel/list?channels="+channelnames+"&offset=",
-            pageSize: 100,
+            url: baseURL + "channel/list?channels="+channelnames+"&limit="+pageSize+"&offset=",
+            pageSize: pageSize,
             request: (url, callback, initial) => {
                 this._qs.queueRequest(url, headers, requeue).then(callback);
             },
             fetchNextPage: function(data, pageSize) {
-                return data.json && "data" in data.json && data.json.data.length === pageSize;
+                return data.json && "data" in data.json && data.json.data.length === data.json.limit;
             },
             getItems: function(data) {
                 if(data.json && data.json.data) {
